code style fix